--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,10 @@
+@import "../../style.scss";
+
 .home{
+    
+@include themify($themes){
+    background-color: themed("bgSoft");
+    color: themed("textColor");
     flex: 4;
+}
 }
