--- a/src/components/rightbar/rightbar.scss
+++ b/src/components/rightbar/rightbar.scss
@@ -1,4 +1,8 @@
+@import "../../style.scss";
 .rightbar{
+    
+@include themify($themes){
+    background-color: themed("border");
     flex: 3;
     position:sticky;
     top: 70px;
@@ -10,7 +14,10 @@
     }
     .container{
         
+        
         .item{
+            background-color: themed("bg");
+            color: themed("textColor");
             box-shadow: -17px 19px 27px -15px rgba(0,0,0,0.75);
 -webkit-box-shadow: -17px 19px 27px -15px rgba(0,0,0,0.75);
 -moz-box-shadow: -17px 19px 27px -15px rgba(0,0,0,0.75);
@@ -78,4 +85,5 @@ padding: 30px;
         }
 
     }
+}
 }
