--- a/src/components/post/post.scss
+++ b/src/components/post/post.scss
@@ -6,6 +6,7 @@
 -webkit-box-shadow: -17px 19px 27px -15px rgba(0,0,0,0.75);
 -moz-box-shadow: -17px 19px 27px -15px rgba(0,0,0,0.75);
 border-radius: 20px;
+margin-left: 15px;
     .container{
         padding: 20px;
         background-color: themed("bg");
