--- a/src/style.scss
+++ b/src/style.scss
@@ -15,24 +15,24 @@ $themes: (
         textColorsoft: lightgray,
         border: #444,
     ),
-    sunset: (
-        bg: rgb(54, 63, 166),
-        textColor: rgb(255, 255, 255),
+    // sunset: (
+    //     bg: rgb(54, 63, 166),
+    //     textColor: rgb(255, 255, 255),
         
-        logo: rgb(255, 255, 255),
-        bgSoft: rgb(80, 148, 230),
-        textColorsoft: #555,
-        border: rgb(89, 197, 236),
-    ),
-    red_hot: (
-        bg: rgb(216, 14, 41),
-        textColor: rgb(255, 255, 255),
+    //     logo: rgb(255, 255, 255),
+    //     bgSoft: rgb(80, 148, 230),
+    //     textColorsoft: #555,
+    //     border: rgb(89, 197, 236),
+    // ),
+    // red_hot: (
+    //     bg: rgb(216, 14, 41),
+    //     textColor: rgb(255, 255, 255),
         
-        logo: rgb(255, 255, 255),
-        bgSoft: rgb(228, 101, 96),
-        textColorsoft: #555,
-        border: rgb(240, 127, 125),
-    ),
+    //     logo: rgb(255, 255, 255),
+    //     bgSoft: rgb(228, 101, 96),
+    //     textColorsoft: #555,
+    //     border: rgb(240, 127, 125),
+    // ),
 );
 
 
